<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/tvLabelForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/label_forgot_pass"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/label_forgot_pass_request"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_email_for_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/label_forgot_pass_hint"
        android:padding="10dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_cancel"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_request"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
