<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_login"
        android:textColor="@color/blue"
        android:textSize="35dp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_email"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_password"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="20dp"
                android:background="@color/yellow"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/label_login"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/label_forgot_pass"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_signup_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/label_signup"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="30dp"
                android:background="@color/yellow"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/label_signup"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
